src/test/deca/context/invalid/sansobjet/assign_incompatible.deca
// Definition in env_types does not exist with the name : string
// Description : Assignation incompatible.
// Resultat : Echech en ligne 7 : un string ne peut pas être initialisé ni mis en tant que variable

{
    int x = 4;
    string y = "blabl";
    x = y;
}